# SLD-Project

./: README.md  contenido.txt  info.txt  pyproject.toml
BACKEND/: manage.py
BACKEND/APPS/TraductorInfoAPI/: admin.py  apps.py  models.py
BACKEND/APPS/TraductorInfoAPI/api/: api.py  mailing.py  serializers.py  urls.py  views.py
BACKEND/APPS/TraductorInfoAPI/migrations/: 0001_initial.py  0002_remove_documents_user_documents_email_documents_name.py
BACKEND/PROJECT/: asgi.py  urls.py  wsgi.py
BACKEND/PROJECT/settings/: base.py
FRONTEND/: .eslintrc.cjs  index.html  package-lock.json  package.json
FRONTEND/src/: Routes.jsx  main.jsx
FRONTEND/src/api/: Task.api.js
FRONTEND/src/components/Camara/: Camara.jsx
FRONTEND/src/components/Navigation/: Navigation.jsx
FRONTEND/src/components/SimpleCard/: SimpleCard.css  SimpleCard.jsx
FRONTEND/src/components/TwitterCard/: TwitterCard.css  TwitterCard.jsx
FRONTEND/src/pages/: Herramientas.jsx  Home.jsx  Inicio.jsx  Nosotros.jsx  Tasks.jsx  Traductor.jsx  signIn.jsx  signOut.jsx
FRONTEND/src/pages/code/: camara.js
FRONTEND/src/pages/styles/: Normalize.css  herramientas.css  index.css  main.css  nosotros.css  traductor.css
